# bgcgr

./: Makefile.in  aclocal.m4  configure  configure.ac
po/: LINGUAS  POTFILES.in  ru.po
src/: Makefile.am  Makefile.in  config.h.in  main.cc  mainwin.cc  mainwin.hh
